Updated header image to pull from database and fixed image stretching. Added bios to user cards on the followers, following, and list-users pages.

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -213,11 +213,10 @@ nav + .container {
   background-position: top center;
 }
 
-#warbler-hero > img {
+#user-header-image {
   width: 100%;
   height: 100%;
-  opacity: 0.7;
-  background-size: cover;
+  object-fit: cover;
 }
 
 .full-width {
